# src/Modules/Invoices/Presentation/Http/Requests/SendInvoiceRequest.php
@@ -1,0 +1,22 @@
+<?php
+
+namespace Modules\Invoices\Presentation\Http\Requests;
+
+use Illuminate\Validation\Rule;
+use Illuminate\Foundation\Http\FormRequest;
+use Modules\Invoices\Domain\Enums\StatusEnum;
+
+class SendInvoiceRequest extends FormRequest
+{
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'invoice_id'     => 'required|string|max:255'
+        ]; 
+    }
+}
