# storage/api-docs/api-docs/api-docs.json
@@ -38,12 +38,12 @@
                                     "customer_email": {
                                         "description": "Customer Email",
                                         "type": "email",
-                                        "example": "Customer Email"
+                                        "example": "test@email.com"
                                     },
                                     "product_lines": {
                                         "description": "JSON data of product lines",
                                         "type": "string",
-                                        "example": "{}"
+                                        "example": "[]"
                                     }
                                 },
                                 "type": "object"
@@ -52,7 +52,7 @@
                     }
                 },
                 "responses": {
-                    "201": {
+                    "200": {
                         "description": "Invoice created successfully"
                     },
                     "422": {
@@ -77,7 +77,7 @@
                     }
                 ],
                 "responses": {
-                    "201": {
+                    "200": {
                         "description": "Invoice Information"
                     },
                     "400": {
@@ -86,24 +86,31 @@
                 }
             }
         },
-        "/api/invoices/send": {
+        "/api/notifications/send": {
             "post": {
                 "tags": [
                     "Notifications"
                 ],
                 "summary": "Send Invoice",
-                "operationId": "fe05b0ca1dcaa736c4a7925ef8c873f2",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "Invoice ID",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
+                "operationId": "ba32f284af715685994100eb7afb0614",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "properties": {
+                                    "invoice_id": {
+                                        "description": "Invoice ID",
+                                        "type": "string",
+                                        "default": "1234",
+                                        "example": "1234"
+                                    }
+                                },
+                                "type": "object"
+                            }
                         }
                     }
-                ],
+                },
                 "responses": {
                     "201": {
                         "description": "Invoice has been sent successfully"
